feat(analysis): project where the mix is heading, at the rate each vehicle actually earns
The curve projected a total, the pyramid measured a mix, and the two ignored each other. Neither
could answer the question a member actually has: do my monthly plans take me toward my targets or
away from them?

Three things had to be true first.

The projection now takes its starting split from WealthPyramidService rather than from account
types. That is the only way the two panels of one screen can agree about the same euro: the
pyramid splits an account line by line and honours manual overrides, so a gold ETC in a brokerage
account was alternative in one panel and equity in the other. It also takes current-account money
out of the base, which the pyramid deliberately carves off as this month's spending and the
projection was compounding for forty years.

Each tier now earns its own rate, and a plan is credited to the tier of the account it funds. The
account was recorded, validated as exactly one, and never read -- so a plan feeding a Livret A
compounded at whatever the curve was labelled, and the single-account rule bought nothing. Worse,
expected_return was written, round-tripped and consumed by nothing: a member who typed 1.7 %
against a passbook plan had it compounded at 7.5 %. It is now used.

The four curves become spreads on risky assets rather than absolute rates. That was the stated
reason a per-plan rate could not be honoured -- folding one in would have made a line labelled
"5 %" mean something else. As spreads both work, and each scenario reports the blended rate it
actually works out to, which varies per member: the same optimistic curve is 10 % for someone
fully invested and 6 % for someone half in cash. A passbook does not have a good year, so the
spread lands only on equity and crypto.

Contributions are share-weighted like the base. A plan funding a half-owned joint account used to
add its whole amount on top of a base that counted half the account.

On top 